languages/montiarc-fe/src/test/resources/contextconditions/invalid/NoInitialState.arc
package contextconditions.invalid;

component NoInitialState{

port in int a,
     out int b;

automaton NoInitialState {
    
    state S;   
}
}